--- a/public/employer.html
+++ b/public/employer.html
@@ -48,6 +48,10 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-search-modal">Search For
         Employees</button>
 
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-profile-modal">Add Job</button>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#employee-skill-modal">Add Skill</button>
+
     <!-- Search for employee modal -->
     <div class="modal fade" id="employee-search-modal" tabindex="-1" role="dialog"
         aria-labelledby="employee-search-Label" aria-hidden="true">
@@ -86,6 +90,78 @@
     </div>
 
 
+<!-- add job modals-->
+    <div class="modal fade" id="employee-profile-modal" tabindex="-1" role="dialog" aria-labelledby="addjobModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Add a new Job!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="well well-sm">
+                        <form class="form-horizontal" method="post">
+                            <fieldset>
+                                <legend class="text-center header">Job Title</legend>
+                                <div class="form-group">
+                                    <div class="col-md-12">
+                                        <input id="jobtitle" name="jobtitle" type="text" placeholder="JobTitle"
+                                            class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12 text-center">
+                                        <button id = "addjob" type="submit" class="btn btn-primary btn-lg">Add</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- add skill modals-->
+        <div class="modal fade" id="employee-skill-modal" tabindex="-1" role="dialog" aria-labelledby="addjobModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="registerModalLabel">Add a new Skill!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="well well-sm">
+                            <form class="form-horizontal" method="post">
+                                <fieldset>
+                                    <legend class="text-center header">Skill Name</legend>
+                                    <div class="form-group">
+                                        <div class="col-md-12">
+                                            <input id="skillname" name="skillname" type="text" placeholder="SkillName"
+                                                class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-md-12 text-center">
+                                            <button id = "addskill" type="submit" class="btn btn-primary btn-lg">Add</button>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     <script type="text/javascript">
         $(document).ready(function () {
 
@@ -106,9 +182,19 @@
                 $('#dropdown-skill-list').after(selectList);
             })
 
-                // append new skills when they're added to database
-            )
-        })
+            // append new skills when they're added to database
+            );
+            $("#addjob").click(function(){
+              var newjob = $("#jobtitle").val();
+              $.post("api/Jobs",newjob).then(back);
+            });
+
+            $("#addskill").click(function(){
+              var newskill = $("skillname").val();
+              $.post("api/Skills",newskill).then(back);
+            });
+
+        });
 
     </script>
 
